<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ProjectDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/diavlo"
        android:textColor="@color/colorWhiteText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_description_title"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorWhiteText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionProject"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorWhiteText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/content_confidentiality_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/confidentialityProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/content_supervisor_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/supervisorProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_mark_title"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorWhiteText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:hint="@string/content_mark_input"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:id="@+id/project_mark"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/colorWhiteText"
            android:textColor="@color/colorWhiteText"
            android:inputType="number"
            android:background="@drawable/background_deepmoreblue"
            android:autofillHints="@string/content_mark_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_mark_info"
            android:textSize="20sp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/content_button_send"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/btn_send_data"
        android:background="@drawable/button_background_red"
        android:textColor="@color/colorWhiteText"
        android:fontFamily="@font/roboto"/>



</LinearLayout>