<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ProjectDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/diavlo"
        android:textColor="@color/colorWhiteText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_description_title"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorWhiteText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionProject"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorWhiteText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/content_confidentiality_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/confidentialityProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/content_supervisor_title"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/supervisorProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhiteText"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

</LinearLayout>